form section finalized and some layout problems issues adjusted

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,14 @@
+html {
+    color: whitesmoke;
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0px;
     padding: 0px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background-image: url(../images/page-bg.jpg);
+    background-attachment: fixed;
 }
 
 nav {
@@ -68,12 +74,14 @@ nav .page-content {
 #current {
     background-color: whitesmoke;
     color: #221f1fa9;
+    font-weight: bold;
 }
 
 .about:hover, .skills:hover, .projects:hover, .contact:hover {
-    background-color: whitesmoke;
+    background-color: rgba(245, 245, 245, 0.6);
     color: #221f1fa9;
     transition: linear .3s;
+    font-weight: bold;
 }
 
 .icons i {
@@ -130,8 +138,8 @@ nav .page-content {
 
 .aboutflex img {
     width: 300px;
-    border-radius: 15px;
-    border: 1px solid whitesmoke;
+    border-radius: 10px;
+    /*border: 1px solid whitesmoke;*/
 }
 
 .aboutflex p {
@@ -140,6 +148,7 @@ nav .page-content {
     margin: 0px 10px 0px 25px;
     width: 500px;
     text-align: justify ;
+    line-height: 30px;
 }
 
 .sectionskills { 
@@ -148,6 +157,7 @@ nav .page-content {
     align-items: center;
     justify-content: space-between;
     padding-bottom: 50px;
+    width: 835px;
     border-bottom: 2px solid #2f4947b7;
 
 }
@@ -164,14 +174,24 @@ nav .page-content {
 }
 
 .gridskills {
+    margin-top: 50px;
     display: grid;
     grid-template-columns: 350px 350px;
     gap: 20px;
+    align-items: center;
+    justify-items: center;
+}
+
+.gridskills p {
+    text-align: center;
+}
+
+.gridskills img {
+    width: 150px;
 }
 
 .html {
-    border: 2px solid black;
-    border-radius: 5px;
+    
 }
 
 .html i {
@@ -180,8 +200,7 @@ nav .page-content {
 }
 
 .css {
-    border: 2px solid black;
-    border-radius: 5px;
+   
 }
 
 .css i {
@@ -190,8 +209,7 @@ nav .page-content {
 }
 
 .javascript {
-    border: 2px solid black;
-    border-radius: 5px;
+    
 }
 
 .javascript i {
@@ -199,8 +217,7 @@ nav .page-content {
     color: #f0db4f;
 }
 .git {
-    border: 2px solid black;
-    border-radius: 5px;
+   
 }
 
 .git i {
@@ -209,5 +226,117 @@ nav .page-content {
 }
 
 .projects-section {
-    height: 2000px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 50px;
+    width: 835px;
+    border-bottom: 2px solid #2f4947b7;
+    height: auto;
+}
+
+.projects-section h1 {
+    text-align: center;
+    color: whitesmoke;
+    font-size: 28px;
+    border-bottom: 4px solid #2f4947b7;
+}
+
+.projects-section p {
+    color: whitesmoke;
+    margin-bottom: 30px;
+}
+
+.gridprojects {
+    display: grid;
+    grid-template-columns: 300px 300px;
+    gap: 20px;
+}
+
+.gridprojects img {
+    width: 300px;
+    border-radius: 10px;
+}
+
+.contactform {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 50px;
+    border-bottom: 2px solid #2f4947b7;
+    width: 835px;
+    height: auto;
+}
+
+.contactform h1 {
+    text-align: center;
+    color: whitesmoke;
+    font-size: 28px;
+    border-bottom: 4px solid #2f4947b7;
+}
+
+.contactform p {
+    text-align: center;
+    color: whitesmoke;
+}
+
+form {
+    background-color:  #2f4947b7;
+    border-radius: 10px;
+    padding: 25px;
+}
+
+form ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+label {
+    /* Uniform size & alignment */
+    display: inline-block;
+    width: 80px;
+    text-align: right;
+}
+
+input, textarea {
+    width: 250px;
+    box-sizing: border-box;
+    border: 2px solid #494848;
+    border-radius: 5px;
+}
+
+textarea {
+    vertical-align: top;
+    height: 150px;
+}
+
+input:focus, textarea:focus {
+    outline: none;
+    border: 2px solid #b1b0b0;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.9);
+}
+
+form .button {
+    padding-left: 85px;
+    border-radius: 5px;
+    outline: none;
+}
+
+form button:hover {
+    
+    border:2px solid #363333;
+    
+}
+
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 80px;
+    font-size: 12px;
+    color: rgba(245, 245, 245, 0.5);
 }
